--- a/_posts/2022-02-21-my-second-distill-post/my-second-distill-post.Rmd
+++ b/_posts/2022-02-21-my-second-distill-post/my-second-distill-post.Rmd
@@ -2,6 +2,8 @@
 title: "My second distill post"
 description: |
   A short description of the post.
+categories:
+  - diamonds
 author:
   - name: Daniel Anderson
     url: https://www.datalorax.com
